--- a/nyc_taxis/src/notebooks/nyc_analysis_notebook.ipynb
+++ b/nyc_taxis/src/notebooks/nyc_analysis_notebook.ipynb
@@ -4,10 +4,7 @@
    "cell_type": "markdown",
    "metadata": {
     "application/vnd.databricks.v1+cell": {
-     "cellMetadata": {
-      "byteLimit": 2048000,
-      "rowLimit": 10000
-     },
+     "cellMetadata": {},
      "inputWidgets": {},
      "nuid": "0b309da0-d2e0-4376-90af-bbdec5b5b0eb",
      "showTitle": false,
@@ -65,10 +62,7 @@
    "cell_type": "markdown",
    "metadata": {
     "application/vnd.databricks.v1+cell": {
-     "cellMetadata": {
-      "byteLimit": 2048000,
-      "rowLimit": 10000
-     },
+     "cellMetadata": {},
      "inputWidgets": {},
      "nuid": "fcdc00d6-77a6-4b4f-9b92-538b419f807e",
      "showTitle": false,
@@ -128,27 +122,6 @@
    "outputs": [],
    "source": [
     "df_nyc_analysis: DataFrame = spark.table(PATH)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 0,
-   "metadata": {
-    "application/vnd.databricks.v1+cell": {
-     "cellMetadata": {
-      "byteLimit": 2048000,
-      "rowLimit": 10000
-     },
-     "inputWidgets": {},
-     "nuid": "328c3df7-e9f0-41e0-943c-31ef386c05e6",
-     "showTitle": false,
-     "tableResultSettingsMap": {},
-     "title": ""
-    }
-   },
-   "outputs": [],
-   "source": [
-    "df_nyc_analysis.display()"
    ]
   }
  ],
