--- a/src/notebooks/nyc_analysis_notebook.ipynb
+++ b/src/notebooks/nyc_analysis_notebook.ipynb
@@ -4,10 +4,7 @@
    "cell_type": "markdown",
    "metadata": {
     "application/vnd.databricks.v1+cell": {
-     "cellMetadata": {
-      "byteLimit": 2048000,
-      "rowLimit": 10000
-     },
+     "cellMetadata": {},
      "inputWidgets": {},
      "nuid": "0b309da0-d2e0-4376-90af-bbdec5b5b0eb",
      "showTitle": false,
@@ -58,17 +55,14 @@
    },
    "outputs": [],
    "source": [
-    "from nyc_taxis.src.helpers.parameters import get_path"
+    "from src.helpers.parameters import get_path"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {
     "application/vnd.databricks.v1+cell": {
-     "cellMetadata": {
-      "byteLimit": 2048000,
-      "rowLimit": 10000
-     },
+     "cellMetadata": {},
      "inputWidgets": {},
      "nuid": "fcdc00d6-77a6-4b4f-9b92-538b419f807e",
      "showTitle": false,
